--- a/styles.css
+++ b/styles.css
@@ -242,58 +242,8 @@ Call To Actions
   .cta {
     width: 95%;
     margin: 80px auto 0;
-  }
-}
-
-@media screen and (max-width: 768px) {
-  .cta {
-    font-size: 40px;
     text-align: center;
-  }
-  .cta > span {
-    font-size: 30px;
-    font-weight: 600;
-    margin-bottom: 30px;
-  }
-}
-
-@media screen and (max-width: 485px) {
-  .cta {
-    font-size: 30px;
-    border: 10px solid #000;
-    text-align: center;
-    letter-spacing: -1.5px;
-  }
-  .cta > span {
-    font-size: 26.5px;
-    font-weight: 600;
-  }
-}
-
-@media screen and (max-width: 395px) {
-  .cta {
-    width: 100%;
-    font-size: 27.5px;
-    border: 8px solid #000;
     letter-spacing: -1px;
-    text-align: center;
-  }
-  .cta > span {
-    font-size: 20px;
-    font-weight: 600;
-  }
-}
-
-@media screen and (max-width: 300px) {
-  .cta {
-    width: 100%;
-    font-size: 21px;
-    border: 6px solid #000;
-    letter-spacing: -1px;
-  }
-  .cta > span {
-    font-size: 20px;
-    font-weight: 600;
   }
 }
 
@@ -474,10 +424,20 @@ Goal
 ---------------------*/
 
 .box-clients {
- 	width: 320px;
+ 	width: 100px;
  	height: 200px;
+  padding-top: 10px;
   margin: auto;
-	position: relative;
+	position: absolute;
+}
+
+@media screen and (max-width: 768px) {
+  .cta {
+    font-size: 45px;
+  }
+  .cta > span {
+    font-size: 40px;
+  }
 }
 
 p.speech {
@@ -535,7 +495,6 @@ About
 ---------------------*/
 
 .about-content {
-  float: left;
   top: 200px;
 	color: #484849;
   font-size: 20px;
@@ -582,3 +541,104 @@ CTA Animations
   -o-animation: fadeInRight 0.3s linear;
 }
 
+
+
+
+
+/*.cta and .cta > span font size adjustments*/
+@media screen and (max-width: 768px) {
+  .cta {
+    font-size: 45px;
+  }
+  .cta > span {
+    font-size: 40px;
+  }
+}
+
+@media screen and (max-width: 595px) {
+  .cta {
+    font-size: 40px;
+  }
+  .cta > span {
+    font-size: 35px;
+  }
+}
+
+@media screen and (max-width: 530px) {
+  .cta {
+    font-size: 40px;
+  }
+  .cta > span {
+    font-size: 30px;
+  }
+}
+
+@media screen and (max-width: 485px) {
+  .cta {
+    font-size: 35px;
+  }
+  .cta > span {
+    font-size: 30px;
+  }
+}
+
+@media screen and (max-width: 465px) {
+  .cta {
+    font-size: 35px;
+  }
+  .cta > span {
+    font-size: 26px;
+  }
+}
+
+@media screen and (max-width: 435px) {
+  .cta {
+    font-size: 30px;
+    border: 10px solid #000;
+  }
+  .cta > span {
+    font-size: 26.5px;
+  }
+}
+
+@media screen and (max-width: 395px) {
+  .cta {
+    width: 100%;
+    font-size: 30px;
+    border: 8px solid #000;
+  }
+  .cta > span {
+    font-size: 25px;
+  }
+}
+
+@media screen and (max-width: 367px) {
+  .cta {
+    width: 100%;
+    font-size: 27.5px;
+    border: 8px solid #000;
+  }
+  .cta > span {
+    font-size: 25px;
+  }
+}
+
+@media screen and (max-width: 307px) {
+  .cta {
+    font-size: 25px;
+    border: 6px solid #000;
+  }
+  .cta > span {
+    font-size: 22.5px;
+  }
+}
+
+@media screen and (max-width: 289px) {
+  .cta {
+    font-size: 25px;
+    border: 6px solid #000;
+  }
+  .cta > span {
+    font-size: 20.9px;
+  }
+}
