--- a/styles.css
+++ b/styles.css
@@ -350,53 +350,58 @@ section.second-cta {
   .button-nav-cta {
     display: none;
   }
-  .hamburger-menu {
-    display: inline-block;
+  nav {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
   }
-  .hamburger-button {
-    font-size: 30px;
-    color: #272625;
-    background-color: transparent;
-    border: none;
+  
+  .hamburger {
+    display: block;
+    width: 30px;
+    height: 25px;
+    position: relative;
     cursor: pointer;
-    position: absolute;
+    margin-left: 20px;
+    margin-top: 5.5px;
   }
-  .hamburger-content {
-    position: fixed;
-    top: 100%;
-    left: 0;
-    z-index: 1;
-    display: none;
-    padding: 10px;
-    background-color: #f3bf02;
-    border: 2px solid #272625;
-    border-top: none;
-  }
-  .hamburger-content button {
-    display: block;
-    margin-bottom: 10px;
-    padding: 5px;
-    color: #272625;
-    background-color: transparent;
-    border: none;
-    font-size: 16px;
-    font-weight: 600;
-  }
-  .hamburger-content button:hover {
+  
+  .hamburger-line {
+    width: 100%;
+    height: 3px;
     background-color: #272625;
-    color: #f3bf02;
+    position: absolute;
+    left: 0;
+    transition: all 0.3s;
   }
-  .hamburger-content.show {
-    display: block;
+  
+  .hamburger-line:nth-child(2) {
+    top: 50%;
+    transform: translateY(-50%);
   }
-}
-
-@media (min-width: 365px) {
-
-  .hamburger-menu {
+  
+  .hamburger-line:nth-child(3) {
+    bottom: 0;
+  }
+  
+  .menu {
     display: none;
   }
+  
+  .show-menu {
+    display: block;
+  }
+  
+  @media (min-width: 365px) {
+    .menu {
+      display: flex;
+    }
+    .hamburger {
+      display: none;
+    }
+  }
 }
+  
 
 
 
