--- a/styles.css
+++ b/styles.css
@@ -189,7 +189,7 @@ section.hero {
   position: relative;
   height: 606.25px;
   padding: 60px;
-  background: url('yellow.png');
+  background: url('Pictures/yellow.png');
   background-repeat: no-repeat;
   background-position: bottom center;
   background-size: cover;
