--- a/styles.css
+++ b/styles.css
@@ -146,6 +146,11 @@ button:focus {
   cursor: pointer;
 }
 
+.nav-logo {
+  height: 36px;
+  width: 36px;
+}
+
 /*--------------------
 Page
 ---------------------*/
