--- a/styles.css
+++ b/styles.css
@@ -685,6 +685,12 @@ Dark/Light mode button
           transform: translate(-50%, -50%);
 }
 
+@media screen and (max-height: 900px) {
+  .theme {
+    display: none;
+  }
+}
+
 .checkbox {
   opacity: 0;
   position: absolute;
@@ -727,33 +733,4 @@ Dark/Light mode button
 
 .checkbox:checked + .checkbox-label .ball {
   transform: translateX(48px);
-}
-
-@media (max-height: 850px) {
-  .checkbox-label {
-    top: 7px;
-    width: 50px;
-    height: 26px;
-    border-radius: 50px;
-  }
-  .checkbox-label .ball {
-    width: 22px;
-    height: 22px;
-    position: absolute;
-    left: 2px;
-    top: 2px;
-    border-radius: 50%;
-
-  }
-  .checkbox:checked + .checkbox-label .ball {
-    transform: translateX(24px);
-  }
-  .fa-moon {
-    color: lightseagreen; 
-    height: 225%;
-  }
-  .fa-sun {
-    color: goldenrod; 
-    height: 225%;
-  } 
 }
