--- a/styles.css
+++ b/styles.css
@@ -31,6 +31,11 @@ body {
   background-color: rgb(242, 76, 61);
 }
 
+polygon {
+  stroke: #22A699;
+  stroke-width: 20;
+}
+
 
 /*--------------------
 Screen
@@ -615,6 +620,34 @@ About
   padding-top: 10px;
 }
 
+.content {
+  margin-top: 25px;
+  border-radius: 25px;
+  text-align: center;
+  background-color: rgba(0, 0, 0, .25);
+}
+
+#c {
+  margin: auto;
+}
+
+.header {
+  text-align: center;
+  width: 100%;
+  margin: auto;
+  height: 25px;
+  color: #484849;
+  font-size: 20px;
+}
+
+.pentagon {
+  width: 300px;
+  height: 300px;
+  margin: auto;
+  padding: 3px 3px 28px 3px;
+  display:inline-block;
+}
+
 
 /*--------------------
 Footer
@@ -734,3 +767,4 @@ Dark/Light mode button
 .checkbox:checked + .checkbox-label .ball {
   transform: translateX(48px);
 }
+
