--- a/styles.css
+++ b/styles.css
@@ -629,7 +629,7 @@ About
 
 .about-content {
   top: 200px;
-	color: #484849;
+  color: #484849;
   font-size: 20px;
   float: none;
   padding-top: 10px;
@@ -639,28 +639,12 @@ About
   margin-top: 25px;
   border-radius: 25px;
   text-align: center;
-  background-color: rgba(0, 0, 0, .25);
+  background-color: rgba(0, 0, 0, 0.25);
+  position: relative;
 }
 
 #c {
   margin: auto;
-}
-
-.header {
-  text-align: center;
-  width: 100%;
-  margin: auto;
-  height: 25px;
-  color: #484849;
-  font-size: 20px;
-}
-
-.pentagon {
-  width: 250px;
-  height: 250px;
-  margin: 0 25px 0 25px;
-  padding: 3px 3px 28px 3px;
-  display:inline-block;
 }
 
 
