--- a/styles.css
+++ b/styles.css
@@ -46,11 +46,6 @@ body {
   background-color: rgb(242, 76, 61);
 }
 
-polygon {
-  stroke: #22a699;
-  stroke-width: 20;
-}
-
 /*--------------------
 Screen
 ---------------------*/
@@ -271,13 +266,15 @@ Call To Actions
   text-overflow: ellipsis;
   overflow: hidden;
   background-color: rgba(0, 0, 0, 0.125);
+  -webkit-backdrop-filter: blur(5px);
+  -moz-backdrop-filter: blur(5px);
   backdrop-filter: blur(5px);
 }
 
 .cta > span {
   font-size: 38px;
   font-weight: 600;
-  margin-bottom: 100px;
+  margin-bottom: 85px;
   line-height: 1;
   position: absolute;
   bottom: 0;
@@ -327,6 +324,8 @@ Call To Actions
   border-radius: 23px;
   transition: all 0.3s;
   background-color: rgba(0, 0, 0, 0.2);
+  -webkit-backdrop-filter: blur(3px);
+  -moz-backdrop-filter: blur(3px);
   backdrop-filter: blur(3px);
   border: 3px solid;
   font-weight: 600;
@@ -366,12 +365,6 @@ Call To Actions
   }
   .cta {
     border-radius: 10px;
-  }
-}
-
-@media (max-width: 612px) and (min-width: 550px) {
-  .cta > span {
-    bottom: -25px;
   }
 }
 
